[package]
name = "nem-mms"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "^1.1.6"
clap = "^2.34.0"
chrono = "^0.4.19"
zip = "^0.5.13"
arrow = "^6.4.0"
parquet = "^6.4.0"
lazy_static = "^1.4.0"
num = "^0.4.0"
scraper = "^0.12.0"
reqwest = { version = "^0.11.8", features = ["blocking"] }
colored = "^2.0.0"
prettytable-rs = "^0.8.0"
strum = "^0.23.0"
strum_macros = "^0.23.0"
